# rst-game

./: .cursorignore  Cargo.toml
src/: client.rs  server.rs
