   [package]
   name = "multiplayer_game"
   version = "0.1.0"
   edition = "2018"

   [dependencies]
   tokio = { version = "1", features = ["full"] }
   tokio-tungstenite = "0.15"
   futures-util = "0.3"

   [[bin]]
   name = "server"
   path = "src/server.rs"

   [[bin]]
   name = "client"
   path = "src/client.rs"